--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-papaparse": "^3.1.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
