--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.2.0",
+    "apexcharts": "^3.19.0",
+    "parse-json": "^5.0.0",
     "react": "^16.13.1",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^16.13.1",
     "react-papaparse": "^3.1.1",
     "react-scripts": "3.4.1"
